# IndustrialBackend

./: .gitignore  Dockerfile  README.md  docker-compose.yml  openapi.json  pyproject.toml  readme.md  requirements.txt  start.sh  test_agent_flow.py  test_import.py  verify_finance_subgraph.py
.github/workflows/: deploy.yml
app/: config.py  e2e_test_runner.py  main.py
app/agent/: nodes.py  state.py  tools.py  workflow.py
app/agent/custom_tool/: graph.py  nodes.py  state.py
app/api/: deps.py  router.py
app/api/endpoints/: admin.py  auth.py  chat.py  conversations.py  documents.py  (+11 more)
app/core/: config.py  database.py  llm.py  logger.py  middleware.py  mothership_client.py  reasoning.py  reasoning_chatopenai.py  security.py
app/domain/: exceptions.py
app/ingestion/: embedder.py  pipeline.py  text_splitter.py
app/models/: ner.py
app/persistence/: blob.py  db.py  replay_buffer.py  vector.py  vl_replay_buffer.py
app/retrieval/: searcher.py
app/schemas/: api.py
app/services/: document_service.py  tool_config_service.py
app/storage/: blob.py  vector.py
app/worker/: tasks.py
documentacion/: analisis_dominio_agentes_reactivos.md  apillmops-cloud.md  architecture_completa.md  auditoria_endpoints_completa.md  auditoria_manejo_usuarios.md  auditoria_persistencia_cross_domain.md  backend-edge.md  end_to_end_communication_audit.md  enterprise_context_tuning_whitepaper.md  prompts_de_prueba.md  readme.md
scripts/: e2e_test_runner.py  generate_vl_dataset.py  patch_llm.py  patch_system1.py  test_cloud_pipeline.py
terraform/: main.tf  outputs.tf  variables.tf
(+229 files in other folders)
